[gd_scene load_steps=2 format=3 uid="uid://cyq8y1eq6rv6o"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_a5n70"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5n70")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -33.0
offset_right = 34.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Start
"

[node name="tutorial" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Window" type="Window" parent="."]
title = "tutorial"
initial_position = 1
size = Vector2i(750, 500)
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/bold_italics_font_size = 50
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/mono_font_size = 50
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 0
bbcode_enabled = true
text = "Welcome to scrapyard
you need to defend your base against ***** using automation and turrets

objects:
 - > = belt moves items from one place to another
 - w = wall
 - e = extractor extracts resources from scrap nodes
 - t = turret takes bullets and outputs death
 - p = producer takes in items and crafts them to its set recipe
 - core = big thing in the middle of the base protect this at all costs

objective: dont let your core be destroyed by the *****

keybinds:
 - movement = arrow keys or wasd
 - set recipe = r
 - open tutorial window = t
 - hotbar slots = numbers
 - break = right mouse button
 - place = left mouse button
 - zoom in / out = scroll wheel
 - rotate clockwise = e
 - rotate counter clockwise = q
 - pickup = f

made by Artyui & spindlebink"

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
